2008-10-11  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (_INC_PENDING): store imid and icid as well.
	(_DEC_PENDING): take imid and icid as argument.
	(INC_PENDING): likewise.
	(DEC_PENDING): likewise.
	(INC_PENDING_C): likewise.
	(DEC_PENDING_C): likewise.
	(xim_proxy_real_dispose): just flush the queue instead of waiting for
	the pending request.
	(xim_proxy_disconnect_all): likewise.
	(xim_proxy_flush_queue): new.

	* backends/xim/proxy.c (xim_proxy_client_protocol_real_xim_encoding_negotiation_reply):
	decrease the pending counter when reconnecting as well.

	* data/xinput.sh.in.in (is_gtk_supported): Add a "kde" since KDE
	support XDG autostart and imsettings-applet could works for XSETTINGS
	manager on KDE.

	* imsettings/imsettings-xsettings.c (_imsettings_xsettings_new):
	Use better API to create an instance of XSETTINGS manager.

	* imsettings/imsettings-xsettings.c (_imsettings_xsettings_dispatch_events): 
	event handler for GdkEvent.
	(imsettings_xsettings_new_with_gdkevent): new.

2008-10-06  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_client_protocol_real_parser_error):
	send back the appropriate error to the client application when
	the parser error happens.

2008-10-03  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_set_ic_values): 
	serialize the event if waiting for any replies of synchronous event.

2008-10-02  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_unset_ic_focus): 
	reset the number of the forward event that is waiting for the response.

	* backends/xim/proxy.c (DEC_PENDING): resend the packet to the proper
	place.
	(INC_PENDING_K): new.
	(DEC_PENDING_K): new.
	(xim_proxy_client_protocol_real_xim_set_ic_values_reply): return true
	if the received packet is a delayed event for fake.
	(xim_proxy_protocol_real_xim_set_ic_values): look at the number of
	the forward event.
